[package]
name = "saildb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sia = { path = "../sia/sia" }
sia = "0.0.4"
# srpc = { path = "../srpc/srpc" }
srpc = "0.0.2"
serde = { version = "1" }
dashmap = "5"
