[package]
name = "saildb"
version = "0.0.1"
edition = "2021"

repository = "https://github.com/znx3p0/saildb"
keywords = [ "rpc", "async", "network", "microservices", "api" ]
description = "SailDB is an in-memory database based on Sia and SRPC."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sia = { path = "../sia/sia" }
sia = "0.0.4"
# srpc = { path = "../srpc/srpc" }
srpc = "0.0.2"
serde = { version = "1" }
dashmap = "5"
